@@ -1,5 +1,4 @@
 -Xmx14g
--XX:+UseG1GC
--XX:MaxGCPauseMillis=200
+-XX:+UseZGC
 --enable-native-access=ALL-UNNAMED
 --add-opens=java.base/sun.misc=ALL-UNNAMED
